@@ -41,3 +41,10 @@
 2011-02-25  Jihoon Kim
 
 	* Add edje_object_part_text_cursor_pos_{set,get} API
+
+2011-02-27  Tom Hacohen (TAsn)
+
+        * Added size_range property to TEXT parts in edje files.
+	This lets you limit the size of the font that will be used.
+	Especially useful when using fit.
+
